// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hysteria2Parser > should parse a hysteria2 URL with params 1`] = `
{
  "auth": {
    "password": "password",
  },
  "authPayload": undefined,
  "down": undefined,
  "fast_open": undefined,
  "hop_interval": undefined,
  "host": "example.com",
  "kind": "hysteria2",
  "obfs": {
    "password": "obfspwd",
    "type": "salamander",
  },
  "password": "password",
  "port": 443,
  "ports": undefined,
  "proto": {
    "hy2": {
      "auth": undefined,
      "down": undefined,
      "fast_open": undefined,
      "hop_interval": undefined,
      "obfs": {
        "password": "obfspwd",
        "type": "salamander",
      },
      "ports": undefined,
      "recv_window_conn": undefined,
      "up": undefined,
    },
  },
  "recv_window_conn": undefined,
  "server": "example.com",
  "server_port": 443,
  "tag": "MyHysteria2ObfsNode",
  "tags": [
    "MyHysteria2ObfsNode",
  ],
  "tls": {
    "enabled": true,
    "insecure": false,
    "server_name": "sub.example.com",
    "sni": "sub.example.com",
  },
  "type": "hysteria2",
  "up": undefined,
  "version": "1.0.0",
}
`;

exports[`Hysteria2Parser > should parse a typical hysteria2 URL 1`] = `
{
  "auth": {
    "password": "password",
  },
  "authPayload": undefined,
  "down": undefined,
  "fast_open": undefined,
  "hop_interval": undefined,
  "host": "example.com",
  "kind": "hysteria2",
  "obfs": undefined,
  "password": "password",
  "port": 443,
  "ports": undefined,
  "proto": {
    "hy2": {
      "auth": undefined,
      "down": undefined,
      "fast_open": undefined,
      "hop_interval": undefined,
      "obfs": undefined,
      "ports": undefined,
      "recv_window_conn": undefined,
      "up": undefined,
    },
  },
  "recv_window_conn": undefined,
  "server": "example.com",
  "server_port": 443,
  "tag": "MyHysteria2Node",
  "tags": [
    "MyHysteria2Node",
  ],
  "tls": {
    "enabled": true,
    "insecure": false,
    "server_name": undefined,
    "sni": undefined,
  },
  "type": "hysteria2",
  "up": undefined,
  "version": "1.0.0",
}
`;
